--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"fcm-node": "^1.5.2",
 		"mongoose": "^5.11.8",
+		"validatorjs": "^3.22.1",
 		"websocket": "^1.0.33"
 	},
 	"devDependencies": {
