--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"scripts": {
-		"start": "node chat-server.js"
+		"start": "nodemon chat-server.js"
 	},
 	"dependencies": {
 		"fcm-node": "^1.5.2",
@@ -9,6 +9,9 @@
 		"websocket": "^1.0.33"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.7"
+		"nodemon": "^2.0.7",
+		"@types/mongoose": "^5.10.5",
+		"@types/node": "^15.0.1",
+		"@types/websocket": "^1.0.2"
 	}
 }
