--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
 	"scripts": {
-		"init": "yarn install",
-		"start": "nodemon chat-server.js"
-	},
-	"nodemonConfig": {
-		"ignore": ["uploads/*"]
-
+		"start": "node chat-server.js",
+		"debug": "nodemon chat-server.js"
 	},
 	"dependencies": {
-		"express": "^4.17.2",
 		"fcm-node": "^1.5.2",
-		"lodash": "^4.17.21",
 		"mongoose": "^5.11.8",
-		"multer": "^1.4.4",
 		"validatorjs": "^3.22.1",
 		"websocket": "^1.0.33"
 	},
 	"devDependencies": {
+		"nodemon": "^2.0.7",
 		"@types/mongoose": "^5.10.5",
 		"@types/node": "^15.0.1",
-		"@types/websocket": "^1.0.2",
-		"nodemon": "^2.0.7"
+		"@types/websocket": "^1.0.2"
 	}
 }
