--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
 		"deploy:public": "./app-deploy.sh public"
 	},
 	"nodemonConfig": {
-		"ignore": ["uploads/*"]
+		"ignore": [
+			"uploads/*"
+		]
 	},
 	"dependencies": {
 		"express": "^4.17.2",
 		"fcm-node": "^1.5.2",
+		"jsonwebtoken": "^9.0.2",
 		"lodash": "^4.17.21",
 		"mongoose": "^5.11.8",
 		"multer": "^1.4.4",
